1. Добавлены Outlets для Верхнего и нижнего Labels на главном экране 2. Для всех iPhone (кроме SE и 5 с высотой = 568.0) выводить нижний label = Спортивные прогнозы. Добавлено в функцию ViewDidLoad 3. Добавлены Outlets для верхнего Constraints кнопок "Прогнозы" и "Статистика" в класс ViewController 4. Для iPhone 6, 6S, 7, 8 (с высотой экрана 667.0) - настроены Constraints программно в классе ViewController

--- a/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
+++ b/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
@@ -185,10 +185,14 @@
                     <connections>
                         <outlet property="aboutUsButton" destination="lih-4P-Ldy" id="FJ2-eV-prc"/>
                         <outlet property="bettingTipsButton" destination="uBP-K8-Wix" id="cGh-cI-jG6"/>
+                        <outlet property="bettingTipsButtonTopConstraint" destination="Kbs-2u-knd" id="Cd7-ft-Bdb"/>
                         <outlet property="chatButton" destination="ZCO-g1-1p3" id="3e5-Qg-CbC"/>
                         <outlet property="emailButton" destination="iq7-pS-pvF" id="xmY-3C-C7w"/>
                         <outlet property="helpButton" destination="N4C-3Q-fJ3" id="L4y-P7-Y65"/>
+                        <outlet property="sportBetsLabel" destination="PMF-W3-YlE" id="bPK-jM-LmP"/>
                         <outlet property="statisticsButton" destination="WuE-nr-FZO" id="n7g-cM-IeP"/>
+                        <outlet property="statisticsButtonTopConstraint" destination="hr2-JV-6pt" id="8j8-y3-IEG"/>
+                        <outlet property="upConstraintYourPersonalSportsBettingAdvisor" destination="mfF-kZ-Hzc" id="Pd2-8J-Xs3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
