Настроены Constraints на главном экране iPhone 11, 11 Pro Max Для нижнего label "Спортивные прогнозы" "Sport Betting Tips" изменены правый и левый Constraint с 71 на 100

--- a/iLoveBetsRus/iLoveBetsRus/Base.lproj/LaunchScreen.storyboard
+++ b/iLoveBetsRus/iLoveBetsRus/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
@@ -13,28 +13,28 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainScreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="2yx-Ki-Xkl">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="-44" width="414" height="920"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Спортивные прогнозы" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="iMZ-Bc-wJZ">
-                                <rect key="frame" x="16" y="223" width="288" height="122"/>
+                                <rect key="frame" x="16" y="267" width="382" height="372"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="51"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="2yx-Ki-Xkl" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="8kH-gv-t7C"/>
+                            <constraint firstItem="2yx-Ki-Xkl" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="-44" id="8kH-gv-t7C"/>
                             <constraint firstItem="iMZ-Bc-wJZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="223" id="BlG-1t-tRB"/>
                             <constraint firstItem="iMZ-Bc-wJZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ELT-jb-AmZ"/>
                             <constraint firstItem="2yx-Ki-Xkl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WKH-4l-MXR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="iMZ-Bc-wJZ" secondAttribute="bottom" constant="223" id="bsP-Sd-oQ1"/>
                             <constraint firstItem="2yx-Ki-Xkl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="e1L-nA-RkE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iMZ-Bc-wJZ" secondAttribute="trailing" constant="16" id="hit-n0-Wph"/>
-                            <constraint firstAttribute="bottom" secondItem="2yx-Ki-Xkl" secondAttribute="bottom" id="yXD-TO-ZJL"/>
+                            <constraint firstAttribute="bottom" secondItem="2yx-Ki-Xkl" secondAttribute="bottom" constant="20" symbolic="YES" id="yXD-TO-ZJL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -45,6 +45,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="MainScreenBackground" width="320" height="568"/>
+        <image name="MainScreenBackground" width="213.33332824707031" height="378.66665649414062"/>
     </resources>
 </document>
